Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29746

Cannot save source path for debugging

XMLWordPrintable

    • Linux/Wayland
    • 585938425 (12.0)

      qt-creator cannot save added source paths to the debugger. 

      Attached a gif to show how to reproduce it. 

      `qt-creator` is downloaded from https://ci-files02-hki.intra.qt.io/packages/jenkins/qtcreator/12.0.0/installers/latest_available/

      ```

      > gdb --version
      GNU gdb (Ubuntu 12.1-0ubuntu1~22.04) 12.1
      Copyright (C) 2022 Free Software Foundation, Inc.
      License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
      This is free software: you are free to change and redistribute it.
      There is NO WARRANTY, to the extent permitted by law.

      ```

      ```

      > lsb_release -a
      No LSB modules are available.
      Distributor ID:    Ubuntu
      Description:    Ubuntu 22.04.3 LTS
      Release:    22.04
      Codename:    jammy

      ```

        1. image-2023-10-12-15-25-13-962.png
          94 kB
          Orkun Tokdemir
        2. debugger_src.gif
          2.41 MB
          Orkun Tokdemir
        For Gerrit Dashboard: QTCREATORBUG-29746
        # Subject Branch Project Status CR V

            hjk hjk
            orkun.tokdemir Orkun Tokdemir
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes