Debugger: Update internal buffer before checking dirtyness

Fixes: QTCREATORBUG-29746
Change-Id: I63f3c5bd2c628b42ba23dd19d80a410dbca8cfc1
Reviewed-by: Christian Stenger <christian.stenger@qt.io>